--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -15,5 +15,12 @@
     <input type="submit" value="Submit">
 </form>
 
+{% if result %}
+Your output: {{ result }}
+{% endif %}
+
+<br>
+<br>
+
 {{ message }}
 
