added new challenges, included next button

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -20,3 +20,12 @@
 <br>
 
 {{ message }}
+
+<br>
+<br>
+
+{% if message == 'Correct :)' %}
+<a href="{% url 'challenge' 1 %}">
+    <button>next</button>
+</a>
+{% endif %}
