--- a/challenges/templates/challenges/home.html
+++ b/challenges/templates/challenges/home.html
@@ -1,7 +1,11 @@
-<h1>Bish Bash Bosh</h1>
+{% extends 'challenges/base.html' %}
+
+{% block content %}
 
 <p>Welcome to Bish Bash Bosh, a site for honing your bash-scripting skills.</p>
 
 <a href="{% url 'challenge' 1 %}">
     <button>Get Started!</button>
 </a>
+
+{% endblock %}
