--- a/challenges/templates/challenges/home.html
+++ b/challenges/templates/challenges/home.html
@@ -2,10 +2,14 @@
 
 {% block content %}
 
+<div class="container">
+    
 <p>Welcome to Bish Bash Bosh, a site for honing your bash-scripting skills.</p>
 
 <a href="{% url 'challenge' 1 %}">
     <button>Get Started!</button>
 </a>
+
+</div>
 
 {% endblock %}
