--- a/challenges/templates/challenges/base.html
+++ b/challenges/templates/challenges/base.html
@@ -8,8 +8,60 @@
 
 <style>
   textarea {
-    height: 25rem;
+    font-family: Courier; 
+    height: 30rem;
+    resize: none;
+    background-color: black;
+    color: white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: none;
+    border: none;
+    overflow: auto;
+    outline: none;
   }
+
+  p {
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
+    margin-top: 0.2rem;
+  }
+
+  ul {
+  font-family: Courier; 
+  font-size: 1.2rem;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 14%;
+  background-color: rgb(248, 248, 248);
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: black;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: black;
+  color: white;
+}
+
+button {
+  background-color: black;
+  color: white;
+}
 </style>
 
 
@@ -20,10 +72,20 @@
 <body>
 
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'home' %}">
       <img src="{% static 'challenges/logo.png' %}" width="25%" height="10%" alt="">
     </a>
 </nav>
+
+<ul>
+  <li><a href="{% url 'challenge' 1 %}"><b>Challenge 1</b></a></li>
+  <li><a href="{% url 'challenge' 2 %}"><b>Challenge 2</b></a></li>
+  <li><a href="{% url 'challenge' 3 %}"><b>Challenge 3</b></a></li>
+  <li><a href="{% url 'challenge' 4 %}"><b>Challenge 4</b></a></li>
+  <li><a href="{% url 'challenge' 5 %}"><b>Challenge 5</b></a></li>
+  <li><a href="{% url 'challenge' 6 %}"><b>Challenge 6</b></a></li>
+</ul>
+
 
 <br>
 
