--- a/challenges/templates/challenges/base.html
+++ b/challenges/templates/challenges/base.html
@@ -10,6 +10,7 @@
   textarea {
     font-family: Courier; 
     height: 30rem;
+    width: 30rem;
     resize: none;
     background-color: black;
     color: white;
@@ -62,6 +63,15 @@ button {
   background-color: black;
   color: white;
 }
+
+.btn-circle.btn-xl {
+			width: 100px;
+			height: 100px;
+			padding: 13px 18px;
+			border-radius: 60px;
+			font-size: 15px;
+			text-align: center;
+		}
 </style>
 
 
