added new challenge and fix bug

--- a/challenges/templates/challenges/base.html
+++ b/challenges/templates/challenges/base.html
@@ -94,6 +94,7 @@ button {
   <li><a href="{% url 'challenge' 4 %}"><b>Challenge 4</b></a></li>
   <li><a href="{% url 'challenge' 5 %}"><b>Challenge 5</b></a></li>
   <li><a href="{% url 'challenge' 6 %}"><b>Challenge 6</b></a></li>
+  <li><a href="{% url 'challenge' 7 %}"><b>Challenge 7</b></a></li>
 </ul>
 
 
