--- a/challenges/templates/challenges/success.html
+++ b/challenges/templates/challenges/success.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
-<h1>Success!</h1>
+
+<div class="text-center">
+    <h1>Success!</h1>
+    <small class="text-muted">
+        <i>
+        <h5>Congratulations, you have finished all of our challenges!</h5>
+        <h5>You are now well on your way to bash mastery.</h5>
+        </i>
+    </small>
+</div>
 
 {% endblock %}
