added extra challenges

--- a/challenges/templates/challenges/base.html
+++ b/challenges/templates/challenges/base.html
@@ -95,6 +95,9 @@ button {
   <li><a href="{% url 'challenge' 5 %}"><b>Challenge 5</b></a></li>
   <li><a href="{% url 'challenge' 6 %}"><b>Challenge 6</b></a></li>
   <li><a href="{% url 'challenge' 7 %}"><b>Challenge 7</b></a></li>
+  <li><a href="{% url 'challenge' 8 %}"><b>Challenge 8</b></a></li>
+  <li><a href="{% url 'challenge' 9 %}"><b>Challenge 9</b></a></li>
+  <li><a href="{% url 'challenge' 10 %}"><b>Challenge 10</b></a></li>
 </ul>
 
 
