--- a/challenges/templates/challenges/home.html
+++ b/challenges/templates/challenges/home.html
@@ -12,7 +12,10 @@
     <hr>
     <small class="text-muted">
         <i>
-        <h5>Bash can be difficult to get your head around. The syntax is not always very intuitive</h5>
+        <h5>Bash can be difficult to get your head around.</h5>
+        <br>
+        <h5>The syntax is not always very intuitive, and it can take some time to transition from something like Python or Javascript.</h5>
+        <br>
         <h5>The best way to learn is by doing, which is why we've created this site: to give you 10 easy challenges to help you on your way to bash mastery.</h5>
         </i>
     </small>
