--- a/challenges/templates/challenges/base.html
+++ b/challenges/templates/challenges/base.html
@@ -72,6 +72,14 @@ button {
 			font-size: 15px;
 			text-align: center;
 		}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    margin: 10px;            
+}
 </style>
 
 
@@ -107,7 +115,20 @@ button {
     {% block content %}{% endblock %}
   </div>
 
-</body>
 
+<!-- Footer -->
+<footer class="page-footer font-small ">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">
+    <i>@Joel Pearce, 2023</i>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
+
+</body>
 
 </html>
